--- a/snake.css
+++ b/snake.css
@@ -8,6 +8,11 @@ body, html{
     border: 1px solid green;
 }
 
-#svg-container{
+.snake_segment{
     position: absolute;
+}
+
+svg{
+    width: 100%;
+    height: 100%;
 }
