--- a/snake.css
+++ b/snake.css
@@ -16,3 +16,10 @@ svg{
     width: 100%;
     height: 100%;
 }
+
+.CFood{
+    border: 1px solid yellow;
+    background-color: greenyellow;
+    border-radius: 50%;
+    position: absolute;
+}
